--- a/SPA2023/Frontend/truwebque/package.json
+++ b/SPA2023/Frontend/truwebque/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
+    "ngx-bootstrap": "^10.2.0",
+    "primeng": "^14.2.5-lts",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
